--- a/pacman1.html
+++ b/pacman1.html
@@ -47,7 +47,7 @@
         preload: function () {
             //  We need this because the assets are on github pages
             //  Remove the next 2 lines if running locally
-            this.load.baseURL = 'https://p13lion.github.io/pacman1/';
+            this.load.baseURL = 'https://p13lion.github.io/pacman1/pacman1';
             this.load.crossOrigin = 'BiLL';
             
             this.load.image('ball', 'assets/ball.png');
