--- a/pacman.html
+++ b/pacman.html
@@ -42,9 +42,9 @@
         preload: function () {
             //  We need this because the assets are on github pages
             //  Remove the next 2 lines if running locally
-            this.load.baseURL = 'https://ioniodi.github.io/pacman/';
+            this.load.baseURL = 'https://p13lion.github.io/pacman/';
             this.load.crossOrigin = 'anonymous';
-            this.load.image('dot', 'assets/dot.png');
+            this.load.image('', 'assets/dot.png');
             this.load.image('tiles', 'assets/pacman-tiles.png');
             this.load.spritesheet('pacman', 'assets/pacman.png', 32, 32);
             this.load.tilemap('map', 'assets/pacman-map.json', null, Phaser.Tilemap.TILED_JSON);
