--- a/pacman.html
+++ b/pacman.html
@@ -9,11 +9,16 @@
             padding: 0;
             background-color: #000;
         }
-    </style>
+        </style>
     <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
 </head>
 <body>
-
+    
+    <audio autoplay loop>
+        <source src="assets/Nto - La Clé Des Champs" type="audio/mp3">
+    </audio>
+    
+  
     <script type="text/javascript">
     var game = new Phaser.Game(448, 496, Phaser.AUTO);
     var Pacman = function (game) {
