--- a/pacman.html
+++ b/pacman.html
@@ -188,8 +188,8 @@
         },
         eatDot: function (pacman, dot) {
             dot.kill();
-            var audio = new Audio('assets/.mp3');
-            audio.play()
+            //var audio = new Audio('assets/.mp3');
+           // audio.play()
             score += 1;
             scoreText.text = 'Score: ' + score;
             if (this.dots.total === 0)
