--- a/pacman.html
+++ b/pacman.html
@@ -62,7 +62,7 @@
             
             this.load.image('feed', 'assets/feed.png');
             this.load.image('tiles', 'assets/pacman-tiles.png');
-            this.load.spritesheet('Capture', 'assets/Capture.jpg', 30, 30);
+            this.load.spritesheet('Capture', 'assets/Capture.png', 30, 30);
             this.load.tilemap('map', 'assets/pacman-map.json', null, Phaser.Tilemap.TILED_JSON);
             //  Needless to say, graphics (C)opyright Namco
         },
