--- a/pacman.html
+++ b/pacman.html
@@ -81,7 +81,7 @@
             
             this.map.createFromTiles(7, this.safetile, 'feed', this.layer, this.dots);
             this.map.createFromTiles(35, this.safetile, 'coin', this.layer, this.coins);
-            this.map.createFromTiles(35, this.safetile, 'apple', this.layer, this.cherries);
+            this.map.createFromTiles(35, this.safetile, 'apple', this.layer, this.apples);
            
             //  The dots will need to be offset by 6px to put them back in the middle of the grid
             this.dots.setAll('x', 6, false, false, 1);
