--- a/pacman.html
+++ b/pacman.html
@@ -65,7 +65,7 @@
             this.load.image('feed', 'assets/feed.png');
             this.load.image('tiles', 'assets/pacman-tiles.png');
             this.load.spritesheet('Capture1', 'assets/Capture1.png', 30, 30);
-            this.load.tilemap('map', 'assets/pacman-map.json', null, Phaser.Tilemap.TILED_JSON);
+            this.load.tilemap('map', 'assets/pacman-map1.json', null, Phaser.Tilemap.TILED_JSON);
             this.load.image('coin','assets/coin.jpg');
             this.load.image('apple', 'assets/apple.png');
           
