--- a/pacman.html
+++ b/pacman.html
@@ -63,7 +63,7 @@
             this.load.spritesheet('Capture1', 'assets/Capture1.png', 29, 29);
             this.load.tilemap('map', 'assets/pacman-map1.json', null, Phaser.Tilemap.TILED_JSON);
 	    this.load.image('coin','assets/coin.jpg');
-            this.load.image('cherry', 'assets/apple.png');
+            this.load.image('apple', 'assets/apple.png');
             //  Needless to say, graphics (C)opyright Namco
         },
         create: function () {
